Fixed slickgrid header menu z-index.

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -247,7 +247,7 @@
 }
 
 .slick-header-menu {
-	z-index: 20;
+	z-index: 1150;
 	padding: 0;
 	min-width: 100px;
 
